# agnes-studio

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DOCKER_COMPOSE.md  EXECUTIVE_ASSESSMENT.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.md  P0_EXECUTION_PLAN.md  P0_IMPLEMENTATION_PLAN.md  PRODUCTION_PLAN.md  README.md  ROADMAP_90_DAYS.md  docker-compose.yml  setup.sh  setup_docker.sh  setup_local.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260615_001_initial_schema.py
backend/app/: main.py
backend/app/api/: __init__.py  api_keys.py  auth.py  gallery.py  images.py  users.py  videos.py
backend/app/core/: auth.py  config.py  database.py
backend/app/models/: api_key.py  credit_transaction.py  database.py  gallery.py  gallery_like.py  image.py  user.py  video.py
backend/app/schemas/: api_key.py  auth.py  credit.py  gallery.py  image.py  video.py
backend/app/services/: agnes_ai.py  api_key_service.py  auth_service.py  credit_service.py  gallery_service.py  image_service.py  video_service.py
backend/app/utils/: helpers.py
backend/scripts/: backfill_credit_ledger.py
backend/tests/: conftest.py  test_auth.py  test_credit_api.py  test_credit_service.py  test_generation.py  test_image_service.py  test_video_charge.py  test_video_service.py
docs/: KNOWN_ISSUES.md  P1_OPTIMIZATION_PLAN.md  ai-generation-test-prompts.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
(+48 files in other folders)
